--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 .time_item {
     margin: 10px;
 }
+
+/*.table-responsive > .table > tbody > tr > td, .table-responsive > .table > tbody > tr > th, .table-responsive > .table > tfoot > tr > td, .table-responsive > .table > tfoot > tr > th, .table-responsive > .table > thead > tr > td, .table-responsive > .table > thead > tr > th {*/
+    /*white-space: nowrap;*/
+    /*margin: 10px;*/
+    /*padding: 10px;*/
+/*}*/
